# cork-core

./: .cspell.json  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/cork-canon/: Cargo.toml
crates/cork-canon/src/: lib.rs
crates/cork-core/: Cargo.toml
crates/cork-core/src/: cli.rs  lib.rs  main.rs  shutdown.rs
crates/cork-core/src/api/: core_service.rs  mod.rs
crates/cork-core/src/engine/: autocommit.rs  mod.rs  patch.rs  refs.rs  run.rs  watchdog.rs
crates/cork-core/src/scheduler/: list.rs  mod.rs  resource.rs
crates/cork-core/src/worker/: client.rs
crates/cork-core/tests/: e2e_minimal.rs
crates/cork-hash/: Cargo.toml
crates/cork-hash/src/: lib.rs
crates/cork-proto/: Cargo.toml  build.rs
crates/cork-proto/src/: lib.rs
crates/cork-schema/: Cargo.toml
crates/cork-schema/src/: lib.rs
crates/cork-store/: Cargo.toml
crates/cork-store/src/: lib.rs
docs/: canonicalization.md  dod.md  hashing.md  mvp.md  specification.md  tasks.md
docs/adr/: 0001-cork-v0.1-core.md  0002-async-lock-policy.md
proto/cork/v1/: core.proto  types.proto  worker.proto
schemas/: cork.contract_manifest.v0.1.schema.json  cork.graph_patch.v0.1.schema.json  cork.policy.v0.1.schema.json
scripts/: setup-rust.sh
src/: lib.rs  main.rs
