[workspace]
resolver = "2"
members = [
    "crates/cork-core",
    "crates/cork-proto",
    "crates/cork-canon",
    "crates/cork-hash",
    "crates/cork-schema",
    "crates/cork-store",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# gRPC / async
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# internal crates
cork-proto = { path = "crates/cork-proto" }
cork-canon = { path = "crates/cork-canon" }
cork-hash = { path = "crates/cork-hash" }
cork-schema = { path = "crates/cork-schema" }
cork-store = { path = "crates/cork-store" }
