[package]
name = "cork-core"
edition.workspace = true
version.workspace = true

[[bin]]
name = "corkd"
path = "src/main.rs"

[dependencies]
cork-hash = { workspace = true }
cork-schema = { workspace = true }
cork-proto = { workspace = true }
cork-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
prost-types = { workspace = true }
