[package]
name = "cork-core"
edition.workspace = true
version.workspace = true

[[bin]]
name = "corkd"
path = "src/main.rs"

[[bin]]
name = "corkctl"
path = "src/bin/corkctl.rs"

[dependencies]
cork-canon = { workspace = true }
cork-hash = { workspace = true }
cork-schema = { workspace = true }
cork-proto = { workspace = true }
cork-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
prost-types = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.10.1"
