[package]
name = "cork-store"
edition.workspace = true
version.workspace = true

[dependencies]
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
cork-proto = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
